--- a/Angel/fish.css
+++ b/Angel/fish.css
@@ -1,11 +1,8 @@
 html {
     background-color: black;
-    font-size: 14px;
-    color: white;
-    text-transform: uppercase;
-    font-weight: bolder;
-    font-family: 'Staatliches', cursive;
-    letter-spacing: 1px;
+    font-size: 18px;
+    color: #ffffff;
+    font-family: 'Francois One', sans-serif;
 }
 
 body {
@@ -25,13 +22,10 @@ canvas {
 .sliderTitle {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+    margin-bottom: -1em;
 }
 
-.sliderTitle p{
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
 
 .slidecontainer {
     width: 100%;
@@ -45,10 +39,15 @@ canvas {
     -webkit-appearance: none;
     appearance: none;
     width: 100%; 
-    height: 20px; 
-    background: #8b8787; 
-    outline: none; 
-    opacity: 0.5;
+    height: 20px;
+    border-radius: 20px;
+    opacity: 0.7;
+    outline: none;
+    background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 100%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(ellipse at center, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#80ffffff',GradientType=1 );
+    
     -webkit-transition: .2s;
     transition: opacity .2s;
   }
@@ -60,24 +59,26 @@ canvas {
   .slidebar::-webkit-slider-thumb {
     -webkit-appearance: none; 
     appearance: none;
-    width: 25px;
-    height: 20px; 
-    background: #cc0000; 
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    background: #ffffff; 
     cursor: pointer; 
   }
   
   .slidebar::-moz-range-thumb {
-    width: 25px;
-    height: 20px; 
-    background: #cc0000; 
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    background: #ffffff; 
     cursor: pointer; 
   }
 
   .switch {
     position: relative;
     display: inline-block;
-    width: 48px;
-    height: 28px;
+    width: 40px;
+    height: 20px;
   }
   
   /* Hide default HTML checkbox */
@@ -101,7 +102,11 @@ canvas {
     right: 0;
     bottom: 0;
     opacity: 0.5;
-    background-color: #8b8787;
+    border-radius: 20px;
+    background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 100%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(ellipse at center, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#80ffffff',GradientType=1 );
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -111,15 +116,17 @@ canvas {
     content: "";
     height: 20px;
     width: 20px;
-    left: 4px;
-    bottom: 4px;
-    background-color: #cc0000;
+    border-radius: 20px;
+    background-color: #ffffff;
     -webkit-transition: .4s;
     transition: .4s;
   }
+
+  .toggle:hover {
+    opacity: 1; 
+  }
   
   input:checked + .toggle {
-    opacity: 1;
     background-color: #8b8787;
   }
   
