--- a/Angel/fish.css
+++ b/Angel/fish.css
@@ -88,7 +88,7 @@ canvas {
     height: 0;
   }
   
-  .togglecontainer {
+  .buttoncontainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -109,6 +109,7 @@ canvas {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#80ffffff',GradientType=1 );
     -webkit-transition: .4s;
     transition: .4s;
+    
   }
   
   .toggle:before {
@@ -134,6 +135,23 @@ canvas {
     -webkit-transform: translateX(20px);
     -ms-transform: translateX(20px);
     transform: translateX(20px);
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .reset {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .fa-sync-alt {
+    font-size: 14px;
+    z-index: 10;
+    color: black;
   }
   
 
