--- a/Angel/fish.css
+++ b/Angel/fish.css
@@ -15,8 +15,8 @@ canvas {
     height: 100%;
     max-width: 900px;
     max-height: 900px;
-    min-width: 600px;
-    min-height: 600px;
+    min-width: 300px;
+    min-height: 300px;
 }
 
 .sliderTitle {
@@ -92,6 +92,7 @@ canvas {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 50px;
   }
 
   .toggle {
@@ -161,9 +162,29 @@ canvas {
         max-height: 600px;
         }
     }
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 1080px) {
     body {
         flex-direction: column;
+        justify-content: flex-start;
+        }
+    .slidecontainer {
+      max-width: 80%;
+    }
+    canvas {
+        max-width: 900px;
+        max-height: 900px;
         }
     }
+  @media only screen and (max-width: 900px) {
+    canvas {
+      max-width: 600px;
+      max-height: 600px;
+      }
+  @media only screen and (max-width: 600px) {
+    canvas {
+      max-width: 300px;
+      max-height: 300px;
+      }
+
+  }
         
